welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: ';' expected but '=' found.
  lettre : string = litMessage()
                  ^